--- a/public/bejelentkezes.html
+++ b/public/bejelentkezes.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bejelentkezés</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="logstyle.css">
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="container">
     <form>
         <h1>Bejelentkezés</h1>
 
@@ -17,5 +18,6 @@
         <button type="button" onclick="belep()">Belépés</button>
         <a href="regisztracio.html">Nincs fiókod? Regisztrálj!</a>
     </form>
+    </div>
 </body>
 </html>
