--- a/public/foglalas.html
+++ b/public/foglalas.html
@@ -1,13 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foglalás</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Foglalás</title>
+<link rel="stylesheet" href="fogstyle.css">
+<script src="script.js" defer></script>
 </head>
 <body>
     <h1>Foglalás</h1>
+    <div id="hotelInfo"></div>
+    <div id="bookingActions">
+        <button onclick="confirmFoglalas()">Foglalás megerősítése</button>
+    </div>
+    <a href="index.html">Vissza a kereséshez</a>
+    
 </body>
 </html>
