--- a/public/regisztracio.html
+++ b/public/regisztracio.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regisztráció</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="logstyle.css">
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div>
     <form>
         <h1>Regisztráció</h1>
 
@@ -19,5 +20,6 @@
         <button type="button" onclick="regist()">Regisztráció</button>
         <a href="bejelentkezes.html">Már van fiókod? Bejelentkezés</a>
     </form>
+    </div>
 </body>
 </html>
